app/css/style.css
@import "tailwindcss/base";
@import "tailwindcss/components";

/* Additional styles */
@import "additional-styles/utility-patterns.css";
@import "additional-styles/toggle-switch.css";
@import "additional-styles/theme.css";

@import "tailwindcss/utilities";

/* Additional Tailwind directives: https://tailwindcss.com/docs/functions-and-directives/#responsive */
@layer utilities {
    .rtl {
        direction: rtl;
    }
}

.swiper {
    --swiper-pagination-color: theme("colors.purple.500");
    --swiper-navigation-color: theme("colors.purple.500");
}

.swiper-slide-shadow-left, .swiper-slide-shadow-right {
    opacity: 0 !important;
}


    .swiper-pagination .swiper-pagination-bullets{
        bottom: 100px !important;
    }

